# tshock-discord-monitor

./: .gitignore  Cargo.toml  Dockerfile  README.md  rustfmt.toml
.github/workflows/: dockerpublish.yml  release.yml  rust.yml
src/: main.rs
