[package]
name = "tshock_discord_monitor"
version = "0.1.3"
authors = ["comp500"]
edition = "2018"
description = "A discord bot that uses the TShock REST API to show player count and forward messages Discord -> Terraria"
license = "GPL-3.0"
homepage = "https://github.com/comp500/tshock-discord-monitor"
repository = "https://github.com/comp500/tshock-discord-monitor"
readme = "README.md"
keywords = ["discord", "terraria", "tshock"]
categories = ["games"]

[dependencies]
serenity = { version = "0.9.0-rc.0", default-features = false, features = ["builder", "cache", "collector", "client", "gateway", "http", "model", "utils", "native_tls_backend"] }
config = { version = "0.10.1", features = ["toml"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
backoff = { version = "0.2.1", features = ["tokio"] }